--- a/style.css
+++ b/style.css
@@ -2,15 +2,113 @@
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 body {
+  background-color: black;
+  color: white;
+
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   overflow: hidden;
   font-family: "roboto", "sans-serif";
   margin: 0;
   height: 100vh;
+}
+
+.header {
+  background-color: #0a0a23;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-right: 30px;
+}
+
+.main-title {
+  padding: 20px 40px;
+}
+
+.icons {
+  padding: 0 15px;
+}
+
+.timer-container {
+  font-size: 7rem;
+  margin: 80px;
+  height: 350px;
+  width: 350px;
+  border: solid 5px white;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.footer-credits {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  font-size: 0.7rem;
+  background-color: #0a0a23;
+  padding: 3px;
+  border: 1px solid white;
+  border-radius: 3px;
+}
+
+.controls-container {
+  display: flex;
+  align-items: center;
+  min-width: 500px;
+  justify-content: space-between;
+}
+
+.break-length-container,
+.session-length-container {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.label {
+  grid-column-start: 1;
+  grid-column-end: 4;
+  text-align: center;
+}
+
+.indicator {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.controls {
+  cursor: pointer;
+  background-color: white;
+  border: 0;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.controls:active {
+  transform: scale(0.98);
+}
+
+.center-buttons-container {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.center-buttons-container button {
+  margin: 0 5px;
+}
+
+a {
+  text-decoration: none;
 }
